<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home" />

    <item
        android:title="@string/menu_configuracion">
        <menu>
            <item
                android:id="@+id/nav_productos"
                android:title="@string/menu_productos"
                android:icon="@drawable/ic_products" />
            <item
                android:id="@+id/nav_ubicaciones"
                android:title="@string/menu_ubicaciones"
                android:icon="@drawable/ic_map" />
            <item
                android:id="@+id/nav_inventarios"
                android:title="@string/menu_inventarios"
                android:icon="@drawable/ic_book" />
            <item
                android:id="@+id/nav_exportacion"
                android:title="@string/menu_exportacion"
                android:icon="@drawable/ic_export"
                android:visible="false" />
            <item
                android:id="@+id/nav_configuracion"
                android:title="@string/menu_configuracion"
                android:icon="@drawable/ic_configuration_manage"
                android:visible="false" />

        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/logout_67"
        android:visible="false"/>
</menu>
